# kinect_baxter_calibration

./: .gitignore  CMakeLists.txt  HowToInstall.md  HowToInstallROS.md  LICENSE.md  README.md  package.xml
Calibration/: ar_calib.yaml  base_camera_tf.yaml  get_ar_calib.py  track_ar_tag.launch
docs/: HowToInstall.md
files/: absolute_orientation.m  ar_calib.yaml  baxter_trajectory  compute_calibration.ipynb  compute_projection.m  gripper_calibration.yaml  kinect_calibration.yaml  kinect_trajectory  marker_track.yaml  marker_trajectory  screen_calibration.yaml
launch/: compute_calibration.launch  gripper_calibration.launch  marker_track.launch  publish_calibration.launch  screen_calibration.launch
scripts/: compute_calibration.py  get_ar_calib.py  marker_calibration.py  marker_track.py  publish_calibration.py
